--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
     <main class="row justify-content-between">
-      <section class="col col-lg-4 d-flex flex-column left-side">
+      <section class="col col-lg-4 d-flex flex-column mb-2 left-side">
         <form
           action="/"
           class="d-flex flex-column"
@@ -137,14 +137,11 @@
 
 
       <section class="col col-lg-4 mb-5 right-side">
-        <div>
-          <p>Message Box:</p>
-        </div>
-
-        <div class="col border border-custom p-3">
-          <p>Your current log:</p>
+        <fieldset class="col p-3">
+          <legend>Message Box :</legend>
+          <p>Your current Log :</p>
           <p class="message">Start try Guessing the correct number!</p>
-        </div>
+        </fieldset>
       </section>
     </main>
   </main>
