--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <input
             id="input-number"
             type="number"
-            class="mb-3 py-2"
+            class="user-input mb-3 py-2"
             placeholder="[ Insert your number ]"
           >
 
