--- a/index.html
+++ b/index.html
@@ -130,9 +130,13 @@
         </div>
 
 
-        <div class="pt-3">
+        <div class="mt-4 d-flex justify-content-between">
           <p>Score:
             <span class="score text-custom">0</span>
+          </p>
+
+          <p>🏆 HighScore:
+            <span class="highscore text-custom">0</span>
           </p>
         </div>
       </section>
