try to preserve HighScore after newGame click event

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <main class="container-fluid main">
     <header class="row flex-column">
-      <div class="col py-3">
+      <div class="col py-3 new-game">
         <a
           href="/"
           class="btn text-custom border border-custom "
