have now : HighScore & newGame button

--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
 <body>
   <main class="container-fluid main">
     <header class="row flex-column">
-      <div class="col py-3 new-game">
-        <a
-          href="/"
-          class="btn text-custom border border-custom "
-        >
+      <div class="col py-3">
+        <button class="new-game border border-custom bg-transparent p-2 text-custom">
           New Game!
-        </a>
+        </button>
       </div>
 
       <div class="col d-flex align-items-center justify-content-center pb-4">
