--- a/index.html
+++ b/index.html
@@ -17,39 +17,89 @@
     type="image/png"
   >
   <title>GuessGame</title>
+
+  <!-- Open Graph tags to customize link previews -->
+  <meta
+    property="og:url"
+    content="https://guessgame-js.netlify.app/"
+  />
+  <meta
+    property="og:type"
+    content="website"
+  />
+  <meta
+    property="og:title"
+    content="GuessGame"
+  />
+  <meta
+    property="og:description"
+    content="Find how many times you can guess the correnct number"
+  />
+  <meta
+    property="og:image"
+    content="media/mob.png"
+  />
 </head>
 
 <body>
   <main class="container-fluid main">
     <header class="row flex-column">
       <div class="col py-3">
-        <button class="new-game border border-custom bg-transparent p-2 text-custom">
-          New Game!
-        </button>
-      </div>
+        <div class="header-top-wrapper d-flex justify-content-between">
+          <button class="new-game border border-custom bg-transparent p-2 text-custom">
+            New Game!
+          </button>
 
-      <div class="col d-flex align-items-center justify-content-center pb-4">
-        <h1 class="main-title text-center">
-          Guess My Number!
-        </h1>
-      </div>
+          <div id="sociallocker">
+            <div class="sociallocker-links">
+              <a
+                href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/"
+                class="social"
+              >
+                <i class="fb-share">f</i>
+                ><span>></span> share
+              </a>
 
-      <div class="col d-flex justify-content-center">
-        <div class="bg-custom q-box">
-          <p
-            id="q-box"
-            class="display-1 text-center pt-3 pr-4 pl-5"
-          >
-            ?
+
+              <a
+                href="http://twitter.com/share?text=GuessGame Retro style&url=https://guessgame-js.netlify.app/&hashtags=JavaScript,webdesign,html5"
+                class="social p-2"
+              >twitter
+              </a>
+
+            </div>
+
+            <!-- use later ------------------------------->
+            <!-- <div id="sociallocker-content">
+              <a href="http://google.com">Download Now</a>
+            </div>
+            <div id="sociallocker-overlay"><i class="fas fa-lock"></i>Unlock content with a social share.</div>
+          </div> -->
+          </div>
+        </div>
+
+        <div class="col d-flex align-items-center justify-content-center pb-4">
+          <h1 class="main-title text-center">
+            Guess My Number!
+          </h1>
+        </div>
+
+        <div class="col d-flex justify-content-center">
+          <div class="bg-custom q-box">
+            <p
+              id="q-box"
+              class="display-1 text-center pt-3 pr-4 pl-5"
+            >
+              ?
+            </p>
+          </div>
+        </div>
+
+        <div class="col d-flex flex-column align-items-center py-5">
+          <p>
+            Between 1 and 100
           </p>
         </div>
-      </div>
-
-      <div class="col d-flex flex-column align-items-center py-5">
-        <p>
-          Between 1 and 100
-        </p>
-      </div>
     </header>
 
 
