--- a/index.html
+++ b/index.html
@@ -45,36 +45,26 @@
   <main class="container-fluid main">
     <header class="row flex-column">
       <div class="col py-3">
-        <div class="header-top-wrapper d-flex justify-content-between">
-          <button class="new-game border border-custom bg-transparent p-2 text-custom">
+        <div class="header-top-wrapper d-flex mb-3">
+          <button class="new-game border border-custom bg-transparent p-2 text-custom mr-2">
             New Game!
           </button>
 
-          <div id="sociallocker">
-            <div class="sociallocker-links">
-              <a
-                href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/"
-                class="social"
-              >
-                <i class="fb-share">f</i>
-                ><span>></span> share
-              </a>
+          <div class="social-links d-flex">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/">
+              <i class="fb-share">f</i>
+              ><span>></span> share
+            </a>
 
-
-              <a
-                href="http://twitter.com/share?text=GuessGame Retro style&url=https://guessgame-js.netlify.app/&hashtags=JavaScript,webdesign,html5"
-                class="social p-2"
-              >twitter
-              </a>
-
-            </div>
-
-            <!-- use later ------------------------------->
-            <!-- <div id="sociallocker-content">
-              <a href="http://google.com">Download Now</a>
-            </div>
-            <div id="sociallocker-overlay"><i class="fas fa-lock"></i>Unlock content with a social share.</div>
-          </div> -->
+            <!-- <a
+              class="twitter-share"
+              href="http://twitter.com/share?text=GuessGame Retro style&url=https://guessgame-js.netlify.app/&hashtags=JavaScript,webdesign,html5"
+            >
+              <img
+                src="media/twitter.png"
+                alt="twitter-share"
+              >><span>></span> share
+            </a> -->
           </div>
         </div>
 
@@ -113,7 +103,7 @@
           <div class="input-wrapper d-flex justify-content-between ">
             <input
               type="number"
-              class="user-input py-2 mb-3"
+              class="user-input p-2 mb-3"
               placeholder="[ Insert your number ]"
             >
           </div>
