social-locker-content

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   />
   <meta
     property="og:description"
-    content="Find how many times you can guess the correnct number"
+    content="Find how many times you can guess the correct number!"
   />
   <meta
     property="og:image"
-    content="media/mob.png"
+    content="media/mob_resized.png"
   />
 </head>
 
@@ -55,16 +55,6 @@
               <i class="fb-share">f</i>
               ><span>></span> share
             </a>
-
-            <!-- <a
-              class="twitter-share"
-              href="http://twitter.com/share?text=GuessGame Retro style&url=https://guessgame-js.netlify.app/&hashtags=JavaScript,webdesign,html5"
-            >
-              <img
-                src="media/twitter.png"
-                alt="twitter-share"
-              >><span>></span> share
-            </a> -->
           </div>
         </div>
 
@@ -189,7 +179,64 @@
     </main>
   </main>
 
+  <footer class="container-fluid footer">
+    <div
+      id="sociallocker"
+      class="footer-wrapper d-flex justify-content-center"
+    >
+      <div id="sociallocker-links">
+        <a
+          href="#"
+          class="social-link fb"
+        >
+          <i class="fa-facebook-f"></i>
+        </a>
+
+        <a
+          href="#"
+          class="social-link tw"
+        >
+          <i class="fab fa-twitter"></i>
+        </a>
+
+        <a
+          href="#"
+          class="social-link pi"
+        >
+          <i class="fab fa-pinterest-p"></i>
+        </a>
+      </div>
+
+      <div class="sociallocker-content">
+        <a
+          href="#q-box"
+          role="button"
+        >
+          <img
+            src="media/pickaxes.png"
+            alt="pickaxes"
+          >
+        </a>
+      </div>
+
+      <div class="sociallocker-overlay">
+        <i class="fa fa-lock"></i>Share to Unlock.
+      </div>
+    </div>
+  </footer>
+
   <script src="js/app.js"></script>
 </body>
 
 </html>
+
+
+<!-- <a
+              class="social tw"
+              href="http://twitter.com/share?text=GuessGame Retro style&url=https://guessgame-js.netlify.app/&hashtags=JavaScript,webdesign,html5"
+            >
+              <img
+                src="media/twitter.png"
+                alt="twitter-share"
+              >><span>></span> share
+            </a> -->
