update sociallocker UI

--- a/index.html
+++ b/index.html
@@ -44,42 +44,50 @@
 <body>
   <main class="container-fluid main">
     <header class="row flex-column">
-      <div class="col py-3">
-        <div class="header-top-wrapper d-flex mb-3">
-          <button class="new-game border border-custom bg-transparent p-2 text-custom mr-2">
-            New Game!
-          </button>
+      <div class="header-top-wrapper d-flex my-4 p-2">
+        <button class="new-game border border-custom bg-transparent p-2 text-custom mr-2">
+          New Game!
+        </button>
 
-          <div class="social-links d-flex">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/">
-              <i class="fb-share">f</i>
-              ><span>></span> share
-            </a>
-          </div>
+        <div class="fb-box d-flex">
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/">
+            <i class="fb-share">f</i>
+            <p class="d-inline"> ><span>> </span> share</p>
+          </a>
         </div>
 
-        <div class="col d-flex align-items-center justify-content-center pb-4">
-          <h1 class="main-title text-center">
-            Guess My Number!
-          </h1>
-        </div>
+        <a
+          href="#"
+          class="ml-auto"
+        >
+          <i class="highscore-ico">🏆</i>
+          HighScore:
+          <span class="highscore text-custom">0</span>
+        </a>
+      </div>
 
-        <div class="col d-flex justify-content-center">
-          <div class="bg-custom q-box">
-            <p
-              id="q-box"
-              class="display-1 text-center pt-3 pr-4 pl-5"
-            >
-              ?
-            </p>
-          </div>
-        </div>
+      <div class="col d-flex align-items-center justify-content-center pb-4">
+        <h1 class="main-title text-center">
+          Guess My Number!
+        </h1>
+      </div>
 
-        <div class="col d-flex flex-column align-items-center py-5">
-          <p>
-            Between 1 and 100
+      <div class="col d-flex justify-content-center">
+        <div class="bg-custom q-box">
+          <p
+            id="q-box"
+            class="display-1 text-center pt-3 pr-4 pl-5"
+          >
+            ?
           </p>
         </div>
+      </div>
+
+      <div class="col d-flex flex-column align-items-center py-5">
+        <p>
+          Between 1 and 100
+        </p>
+      </div>
     </header>
 
 
@@ -161,10 +169,6 @@
           <p>Score:
             <span class="score text-custom">0</span>
           </p>
-
-          <p>🏆 HighScore:
-            <span class="highscore text-custom">0</span>
-          </p>
         </div>
       </section>
 
@@ -179,48 +183,54 @@
     </main>
   </main>
 
-  <footer class="container-fluid footer">
+  <footer class="container-fluid ">
     <div
-      id="sociallocker"
-      class="footer-wrapper d-flex justify-content-center"
+      class="sociallocker-wrapper d-flex justify-content-center align-items-centerd-flex justify-content-center align-items-center m-5"
     >
-      <div id="sociallocker-links">
-        <a
-          href="#"
-          class="social-link fb"
-        >
-          <i class="fa-facebook-f"></i>
-        </a>
-
-        <a
-          href="#"
-          class="social-link tw"
-        >
-          <i class="fab fa-twitter"></i>
-        </a>
-
-        <a
-          href="#"
-          class="social-link pi"
-        >
-          <i class="fab fa-pinterest-p"></i>
-        </a>
-      </div>
-
-      <div class="sociallocker-content">
-        <a
-          href="#q-box"
-          role="button"
-        >
-          <img
-            src="media/pickaxes.png"
-            alt="pickaxes"
+      <div
+        class="sociallocker d-flex justify-content-center align-items-centerd-flex justify-content-center align-items-center"
+      >
+        <div class="sociallocker-links">
+          <a
+            href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/"
+            class="social-link fb"
           >
-        </a>
-      </div>
+            <i class="fab fa-facebook-f"></i>
+          </a>
 
-      <div class="sociallocker-overlay">
-        <i class="fa fa-lock"></i>Share to Unlock.
+          <a
+            href="http://twitter.com/share?text=GuessGame Retro style&url=https://guessgame-js.netlify.app/&hashtags=JavaScript,webdesign,html5"
+            class="social-link tw"
+          >
+            <i class="fab fa-twitter"></i>
+          </a>
+
+          <a
+            href="#"
+            class="social-link pi"
+          >
+            <i class="fab fa-pinterest-p"></i>
+          </a>
+        </div>
+
+        <div class="sociallocker-content">
+          <a
+            href="#q-box"
+            role="button"
+          >
+            <div class="img-wrapper">
+              <img
+                src="media/pickaxes.png"
+                alt="pickaxes"
+              >
+            </div>
+          </a>
+        </div>
+
+        <div class="sociallocker-overlay d-flex flex-column">
+          <p>Share to Unlock</p>
+          <i class="fa fa-lock"></i>
+        </div>
       </div>
     </div>
   </footer>
@@ -231,12 +241,4 @@
 </html>
 
 
-<!-- <a
-              class="social tw"
-              href="http://twitter.com/share?text=GuessGame Retro style&url=https://guessgame-js.netlify.app/&hashtags=JavaScript,webdesign,html5"
-            >
-              <img
-                src="media/twitter.png"
-                alt="twitter-share"
-              >><span>></span> share
-            </a> -->
+<!-- -->
