fix responsive down xs

--- a/index.html
+++ b/index.html
@@ -49,16 +49,19 @@
           New Game!
         </button>
 
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/">
+        <a
+          class="flex-shrink-0"
+          href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/"
+        >
           <div class="fb-box">
-            <p class="fb-share-wrapper d-flex flex-nowrap align-items-start">
+            <p class="fb-share-wrapper d-flex align-items-start flex-shrink-0">
               <i class="fb-ico mr-1">f</i>
               <span> >> <span>share</span></span>
             </p>
           </div>
         </a>
 
-        <div class="highscore-box d-flex flex-nowrap align-items-end ml-auto">
+        <div class="highscore-box d-flex align-items-end ml-auto">
           <p class="highscore-wrapper">
             <i class="highscore-ico">🏆</i>
             HighScore: <span class="highscore text-custom"> 0</span>
