rethink sociallocker function

--- a/index.html
+++ b/index.html
@@ -218,11 +218,28 @@
         </div>
 
         <div class="sociallocker-content">
+          <div class="img-wrapper">
+            <img
+              src="media/pickaxes.png"
+              alt="pickaxes"
+            >
+          </div>
+        </div>
+
+        <div class="sociallocker-overlay">
+          <p class="d-inline-block ">Share to Unlock</p>
+          <i class="fa fa-lock"></i>
+        </div>
+
+        <div class="sociallocker-content-unlock d-none">
+          <p class="text-left">Use it to break the box</p>
+
           <a
             class="unlock-content"
             href="#top"
             role="button"
           >
+
             <div class="img-wrapper">
               <img
                 src="media/pickaxes.png"
@@ -230,17 +247,8 @@
               >
             </div>
           </a>
-
-          <div class="d-none sociallocker-overlay-unlock">
-            <p class="text-left">Use to break the box</p>
-          </div>
-
         </div>
 
-        <div class="sociallocker-overlay">
-          <p class="d-inline-block ">Share to Unlock</p>
-          <i class="fa fa-lock"></i>
-        </div>
       </div>
     </div>
   </footer>
