--- a/index.html
+++ b/index.html
@@ -46,28 +46,31 @@
     <a id="top"></a>
     <header class="row flex-column">
       <div class="header-top-wrapper d-flex m-4">
-        <button class="new-game border border-custom bg-transparent p-2 text-custom mr-2">
+        <button class="new-game border border-custom bg-transparent text-custom mr-5">
           New Game!
         </button>
 
+        <div class="highscore-box d-flex align-items-end ">
+          <p class="highscore-wrapper align-items-end">
+            <i class="highscore-ico">
+              🏆
+            </i>
+            HighScore: <span class="highscore text-custom ml-2"> 0</span>
+          </p>
+        </div>
+
         <a
-          class="flex-shrink-0"
+          class="flex-shrink-0 fb-toplink ml-auto"
           href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/"
         >
           <div class="fb-box">
             <p class="fb-share-wrapper d-flex align-items-start flex-shrink-0">
-              <i class="fb-ico mr-1">f</i>
+              <i class="fb-ico mr-3">f</i>
               <span> >> <span>share</span></span>
             </p>
           </div>
         </a>
 
-        <div class="highscore-box d-flex align-items-end ml-auto">
-          <p class="highscore-wrapper">
-            <i class="highscore-ico">🏆</i>
-            HighScore: <span class="highscore text-custom"> 0</span>
-          </p>
-        </div>
       </div>
 
       <div class="col d-flex align-items-center justify-content-center pb-4">
