--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
               type="number"
               class="user-input p-2 mb-3"
               placeholder="[ Insert your number ]"
+              role="botton"
             >
           </div>
 
