--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         >
           <div class="input-wrapper d-flex justify-content-between ">
             <input
-              type="number"
+              type="submit"
               class="user-input p-2 mb-3"
               placeholder="[ Insert your number ]"
               role="botton"
