--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       id="top"
       class="row flex-column"
     >
-      <div class="header-top-wrapper d-flex justify-content-between m-4">
-        <button class="new-game border border-custom bg-transparent text-custom mr-5">
+      <div class="header-top-wrapper d-flex justify-content-between m-5">
+        <button class="new-game border border-custom bg-transparent mr-5">
           New Game!
         </button>
 
