--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta
+    name="description"
+    content="HTML5 Game with vannilla JavaScript"
+  >
+  <meta
+    name="keywords"
+    content="HTML GAME, CSS, JavaScript"
+  >
+  <meta
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
@@ -106,12 +114,13 @@
           class="d-flex flex-column"
         >
           <div class="input-wrapper d-flex justify-content-between ">
+            <label for="userinputno"></label>
             <input
+              id="userinputno"
               name="userinputno"
               type="number"
               class="user-input p-2 mb-3"
               placeholder="[ Insert your number ]"
-              role="submit"
             >
           </div>
 
@@ -133,6 +142,8 @@
           <div class="hearts-wrapper d-flex ml-auto">
             <div class="border border-custom">
               <img
+                alt="heart-1"
+                title="heart-1"
                 class="py-1"
                 id="heart-1"
                 src="media/pixel-heart.svg"
@@ -141,6 +152,8 @@
 
             <div class="svg-wrapper border border-custom">
               <img
+                alt="heart-2"
+                title="heart-2"
                 class="py-1"
                 id="heart-2"
                 src="media/pixel-heart.svg"
@@ -149,6 +162,8 @@
 
             <div class="svg-wrapper border border-custom">
               <img
+                alt="heart-3"
+                title="heart-3"
                 class="py-1"
                 id="heart-3"
                 src="media/pixel-heart.svg"
@@ -157,6 +172,8 @@
 
             <div class="svg-wrapper border border-custom">
               <img
+                alt="heart-4"
+                title="heart-4"
                 class="py-1"
                 id="heart-4"
                 src="media/pixel-heart.svg"
@@ -165,6 +182,8 @@
 
             <div class="svg-wrapper border border-custom">
               <img
+                alt="heart-5"
+                title="heart-5"
                 class="py-1"
                 id="heart-5"
                 src="media/pixel-heart.svg"
