--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
           <a
             href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/"
             class="social-link fb"
+            title="Facebook"
           >
             <i class="fab fa-facebook-f"></i>
           </a>
@@ -229,6 +230,7 @@
           <a
             href="http://twitter.com/share?text=GuessGame Retro style&url=https://guessgame-js.netlify.app/&hashtags=JavaScript,webdesign,html5"
             class="social-link tw"
+            title="Twitter"
           >
             <i class="fab fa-twitter"></i>
           </a>
@@ -236,6 +238,7 @@
           <a
             href="//www.pinterest.com/pin/create/button/"
             class="social-link pi"
+            title="Pinterest"
           >
             <i class="fab fa-pinterest-p"></i>
           </a>
