--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <a
           class="flex-shrink-0 fb-toplink"
           href="https://www.facebook.com/sharer/sharer.php?u=https://guessgame-js.netlify.app/"
+          title="share on Facebook"
         >
           <div class="fb-box">
             <div class="fb-share-wrapper d-flex align-items-start flex-shrink-0">
