--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
           </span>
 
           <div class="hearts-wrapper d-flex ml-auto">
-            <div class="border border-custom">
+            <div class=" svg-wrapper border border-custom">
               <img
                 alt="heart-1"
                 title="heart-1"
-                class="py-1"
+                class="heart py-1"
                 id="heart-1"
                 src="media/pixel-heart.svg"
               ></img>
@@ -156,7 +156,7 @@
               <img
                 alt="heart-2"
                 title="heart-2"
-                class="py-1"
+                class="heart py-1"
                 id="heart-2"
                 src="media/pixel-heart.svg"
               ></img>
@@ -166,7 +166,7 @@
               <img
                 alt="heart-3"
                 title="heart-3"
-                class="py-1"
+                class="heart py-1"
                 id="heart-3"
                 src="media/pixel-heart.svg"
               ></img>
@@ -176,7 +176,7 @@
               <img
                 alt="heart-4"
                 title="heart-4"
-                class="py-1"
+                class="heart py-1"
                 id="heart-4"
                 src="media/pixel-heart.svg"
               ></img>
@@ -186,7 +186,7 @@
               <img
                 alt="heart-5"
                 title="heart-5"
-                class="py-1"
+                class="heart py-1"
                 id="heart-5"
                 src="media/pixel-heart.svg"
               ></img>
