preview link og

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  />
+  <meta
+    property="og:image"
+    content="media/og-image.png"
+  />
+  <meta
     name="description"
     content="HTML5 Game with vannilla JavaScript"
   >
   <meta
     name="keywords"
     content="HTML GAME, CSS, JavaScript"
-  >
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0"
   >
   <link
     rel="stylesheet"
@@ -28,10 +32,6 @@
 
   <!-- Open Graph tags to customize link previews -->
   <meta
-    property="og:url"
-    content="https://guessgame-js.netlify.app/"
-  />
-  <meta
     property="og:type"
     content="website"
   />
@@ -42,10 +42,6 @@
   <meta
     property="og:description"
     content="Find how many times you can guess the correct number!"
-  />
-  <meta
-    property="og:image"
-    content="media/mob_resized.png"
   />
 </head>
 
