update prev link

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   />
   <meta
     property="og:image"
-    content="media/og-image.png"
+    content="media/screenshot-laptop.png"
   />
+  <meta
+    name="twitter:card"
+    content="summary_large_image"
+  >
   <meta
     name="description"
     content="HTML5 Game with vannilla JavaScript"
@@ -29,12 +33,6 @@
     type="image/png"
   >
   <title>GuessGame</title>
-
-  <!-- Open Graph tags to customize link previews -->
-  <meta
-    property="og:type"
-    content="website"
-  />
   <meta
     property="og:title"
     content="GuessGame"
